--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -71,7 +71,7 @@
   <h3>Цикл 2: Плато</h3>
   <div class='story-center'>
     
-    <p><b><i>"Объявлен код "Розовый"!"</i></b><br><a href='/code-pink'>Часть 1: "Прибытие"</a> | <a href='/code-pink-2'>Часть 2: "Влечение"</a><br><i>Автор: AlexandrHell</i></p>
+    <p><b><i>"Объявлен код "Розовый"!"</i></b><br><a href='/code-pink'>Часть 1: "Прибытие"</a> | <a href='/code-pink#chapter-2'>Часть 2: "Влечение"</a><br><i>Автор: AlexandrHell</i></p>
 
     <p><a href="/tough-duty">Нелегкий труд</a><br><span style='font-style: italic;'>Автор: AlexandrHell</span></p>
 
