--- a/nsfw-hub/code-pink.html
+++ b/nsfw-hub/code-pink.html
@@ -13,7 +13,7 @@
 </div>
 <div style='max-width: 850px;margin: auto;'><h1>Объявлен код "Розовый"!</h1>
 
-<h2>Часть 1: "Прибытие"</h2>
+<h2 id='chapter-1'>Часть 1: "Прибытие"</h2>
 <p>Равномерный стук в иллюминатор вертолёта крупных каплей дождя почти сводил с ума, но к нему можно привыкнуть. Отряд из семи бойцов включая командира, молча сидел на своих местах и каждый, смотря в пустоту, думал о чём-то своём. В комплексе, куда направлялся данный вертолёт, примерно 10 минут назад автоматической системой безопасности был отправлен сигнал тревоги, больше информации от комплекса не было, ни запросов, ни отчётов, ни докладов службы безопасности… ничего. У бойцов было скверное настроение, они летят в неизвестность, их задача зайти в комплекс и выяснить, что там произошло, зная специфику объектов поставленных на содержание в фонде, ситуация могла развиться самым непредсказуемым образом. Капитан решил подбодрить своих бойцов и воскликнул, пытаясь перекричать гул вертолёта: "А чо это мы такие грустные? Надеюсь, вы хорошо поужинали бойцы! Потому что завтракать мы будем в АДУ! Ха-ха-ха-ха."</p>
 
 <p>Отряд одновременно и монотонным голосом ответил: "Есть сэр, да сэр!", - Того требовала субординация, но у каждого было тайное желание врезать по этой наглой морде, с такими шутками далеко не уедешь.</p>
@@ -30,7 +30,7 @@
 
 <p>Выкрикнув своё типичное: "И главное помните, кто умрёт с полной обоймой, то после операции я трахну его труп! За мной!", - На тот момент мы и представить не могли, что роль первого двухсотого в нашем отряде была отведена, как раз капитану…</p>
 
-<h2>Часть 2: "Влечение"</h2>
+<h2 id='chapter-2'>Часть 2: "Влечение"</h2>
 
 <p>Оперативник шёл по длинным, тёмным коридорам, тусклый свет тактического фонарика,  то и дело облизывал тёмные неподвижные силуэты, это были тела людей или части от них. В рации тихо шумели помехи и изредка звучали отрывистые фразы "центр, я  двухсотый" и за ними, как правило, следовали нечеловеческие вопли, а далее снова равномерные помехи. Центр молчал, на эти отчёты бойцов отвечал всегда сухо: "Понял, принял, вычеркиваю."</p>
 
@@ -45,7 +45,7 @@
 <p style='font-size:70%; text-align:right;'><strong>Автор:</strong> AlexandrHell
 <hr>
 <div style="text-align: center;font-size:80%; font-weight: bolder;">
-<p>« <a href='/nsfw-hub'>Главная</a> | Объявлен код "Розовый"! <!-- | <a href='/code-pink-2'>Часть 2: "Влечение"</a> »!---></p></div>
+<p>« <a href='/nsfw-hub'>Главная</a> | Объявлен код "Розовый"! | <!-- <a href='/code-pink-2'>Часть 2: "Влечение"</a> »!---></p></div>
 
 </div>
 </body>
