--- a/nsfw-hub/nuthouse-19f.html
+++ b/nsfw-hub/nuthouse-19f.html
@@ -13,7 +13,7 @@
 </div>
 <div style='max-width: 850px;margin: auto;'><h1>Дурка 19F</h1>
 
-<h2>Расшифровка:</h2>
+<h3>Глоссарий:</h3>
 
 <p>СБ &ndash; Служба безопасности;</span></p>
 <p>СВТ &ndash; Служба внутреннего трибунала;</span></p>
@@ -29,7 +29,7 @@
 <p>БДСМ &ndash;жестокое доминирование над партнёром.</span></p>
 <p><strong><span>&nbsp;</span></strong></p>
 
-<h2>Пролог</h2>
+<h2 id='prologue'>Пролог</h2>
 
 <p>До начала смены СБ было около часа. В кабинете сержанта СБ Лагузы проходила типичная для этого человека профилактическая работа с подчиненными.</span></p>
 <p>Просторное помещение было заставлено всяческим оборудованием, необходимым для работы, а в дальнем углу кабинета стоял массивный стол, по обе стороны которого &nbsp;виднелись две фигуры. Первая принадлежала провинившемуся сотруднику службы безопасности, вторая же &mdash; младшему сержанту службы безопасности Лагузе, в данный момент исполнявшему роль палача.</span></p>
@@ -47,7 +47,7 @@
 <p>Глаза старшего НС начали медленно расширяться, пульсометр на его запястье резко начал увеличивать показатели. 90 ударов. 100 ударов. 115 ударов. И после минутной задержки лицо Селвика покраснело.</span></p>
 <p>-&nbsp;&quot;Прошу прощения за беспокойство. Я зайду позже&quot; &ndash; почти под нос пробубнил себе старший НС, после чего резко развернулся и пулей вылетел из кабинета громко хлопнув дверью.</span></p>
 
-<h2>Глава 1. Построение</h2>
+<h2 id='chapter-1'>Глава 1. Построение</h2>
 
 <p>Новобранец не явился на построение, организованное сержантом СБ Чеховым. Этот старый больной засранец всегда собирал весь штат службы безопасности перед сменой возле своего кабинета и зачитывал заученные наизусть инструкции лишь для того, чтобы потешить своё самолюбие.</span></p>
 <p>Этой процедурой Чехов напрочь лишал возможности рядовых сотрудников выпить кофе перед сменой, ведь как известно в знаменитой поговорке &quot;Порно начинается с прелюдии, а смена СБ с кофе&quot;.Однако у Чехова было совсем другое мнение по этому поводу и о подобных поговорках он не слышал.&nbsp;</span></p>
@@ -81,14 +81,14 @@
 <p>-&nbsp;&quot;Две боевые осколочные гранаты, сэр!&quot; - радостно ответил Рокоссовский и пафосно отдал честь.</span></p>
 <p>После этих слов в строю начался сущий кошмар...</span></p>
 
-<h2>Глава 2. Смена</h2>
+<h2 id='chapter-2'>Глава 2. Смена</h2>
 
 <p>Лагуза находился у входа в кабинет сержанта, Чехов в свою очередь сидел за столом яростно жестикулируя, крича что-то невразумительное, то и дело тыкая пальцем в лежащую на столе книгу &laquo;Устав СВТ&raquo;. Сотрудник СБ Рокоссовский сидел напротив сержанта закинув ногу на ногу и ковырялся в носу. Совладав со своими эмоциями, Чехов наконец начал говорить членораздельно.</span></p>
 <p>-&nbsp;&laquo;ПРИДУРОК! УРОД! Я ТЕБЕ, СУЧОНОК, УСТРОЮ ТАКОЕ, ЧТО ТЕБЯ МАТЬ РОДНАЯ НЕ УЗНАЕТ!&raquo; - с красным лицом прокричал сержант, при этом заплёвывая всё, что было на столе и тут же у него началась серьезная одышка. Именно в эту паузу Рокоссовский успел вставить своё колкое мнение.</span></p>
 <p>-&nbsp;&laquo;Сержант, разрешите обратиться! Вас в таком виде и ВАША мать не узнала бы&quot;...</span></p>
 <p>У Чехова помутнело в глазах, его рука потянулась к кобуре со служебным пистолетом&hellip; Лагуза, до этого момента стоявший и наблюдавший всю эту сцену абсолютно безразличными глазами, оживился.</span></p>
 <p>-&nbsp;&laquo;Сержант, прошу меня простить, но может Вы успокоетесь...&raquo;</span></p>
-<p В этот самый момент зазвонил телефон на столе Чехова. Сержант несколько секунд смотрел на телефон, затем перевёл взгляд на Рокоссовского. Сотрудник СБ всё так же сидел и ковырялся в носу абсолютно довольный тем, что его колкость в адрес сержанта удалась более чем на 150%. Чехов, не сводя взгляда с Рокоссовского, убрал руку от кобуры и взял трубку.</span></p>
+<p>В этот самый момент зазвонил телефон на столе Чехова. Сержант несколько секунд смотрел на телефон, затем перевёл взгляд на Рокоссовского. Сотрудник СБ всё так же сидел и ковырялся в носу абсолютно довольный тем, что его колкость в адрес сержанта удалась более чем на 150%. Чехов, не сводя взгляда с Рокоссовского, убрал руку от кобуры и взял трубку.</span></p>
 <p>-&nbsp;&laquo;Чехов, слушаю&raquo;</span></p>
 <p>Из трубки донесся истеричный крик старшего НС Селвика:</span></p>
 <p>-&nbsp;&laquo;Сержант! У нас ЧП! Один из младших научных сотрудников Фриман сошёл с ума! Он взял канцелярский нож и приставил к горлу научного сотрудника Кацураги, пожалуйста пришлите сотрудников службы безопасности, способных уладить данный конфликт максимально дипломатичным путём!&raquo;.</span></p>
@@ -154,7 +154,7 @@
 <p style='font-size:70%; text-align:right;'><strong>Автор:</strong> AlexandrHell
 <hr>
 <div style="text-align: center;font-size:80%; font-weight: bolder;">
-<p>« <a href='/nsfw-hub'>Главная</a> | Дурка 19F</p></div>
+<p>« <a href='/nsfw-hub'>Главная</a> | Дурка 19F | </p></div>
 
 </div>
 </body>
