--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
-  <link rel="stylesheet" href="code-pink.css">
+  <link rel="stylesheet" href="https://prince-oflynn.github.io/nsfw-hub/code-pink.css">
   <link rel="icon" href="https://i.ibb.co/93Xb6Rb/IMG-1176.png">
   <title>Хаб "NSFW"</title>
   
