--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -49,8 +49,9 @@
 
   <p><strong>Особые указания:</strong> Персоналу и охране следует любой ценой избегать взаимодействия с аномалией(-ями), во избежание перетраха и фатального исхода контакта. Оставайтесь в безопасном месте и следуйте указаниям администрации учреждения / штаба O4. Ожидайте прибытия высококвалифицированных оперативников.</p>
 
-  <p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница"), <a href='/nsfw-hub/mtf-fi-69'>МОГ Фи-69 ("Виагра").</a></p></div>
+  <p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница"), <a href='https://prince-oflynn.github.io/nsfw-hub/mtf-fi-69'>МОГ Фи-69 ("Виагра").</a></p></div>
 </div>
+
 <!-- scp !-->
 
 <h2 style='color: crimson;'>Представленные SCP объекты:</h2><ul>
