--- a/nsfw-hub/scp-939-s-ex.html
+++ b/nsfw-hub/scp-939-s-ex.html
@@ -35,7 +35,7 @@
 <!-- База !-->
 <p><strong>Объект №:</strong> 939-S-EX</p>
 <!-- раздел !-->
-<p><strong>Класс объекта:</strong> <a href='/horny-keter'>Возбуждённый кетер</a></p>
+<p><strong>Класс объекта:</strong> <a href='/nsfw-hub/horny-keter'>Возбуждённый кетер</a></p>
 <!-- раздел !-->
 <p><strong>Класс нарушения:</strong> Кенэк</p>
 <!-- раздел !-->
