--- a/nsfw-hub/horny-keter.html
+++ b/nsfw-hub/horny-keter.html
@@ -26,7 +26,7 @@
 <p style='font-size:70%; text-align:right;'><strong>Иллюстрация:</strong> AlexandrHell<br><strong>Текст:</strong> PRINCE
 <hr>
 <div style="text-align: center;font-size:80%; font-weight: bolder;">
-<p>« <a href='/scp-939-s-ex'>SCP-939-S-EX</a> | Возбуждённый кетер</p></div>
+<p>« <a href='/nsfw-hub/scp-939-s-ex'>SCP-939-S-EX</a> | Возбуждённый кетер</p></div>
 
 </div>
 </body>
