--- a/nsfw-hub/index.html
+++ b/nsfw-hub/index.html
@@ -49,20 +49,20 @@
 
   <p><strong>Особые указания:</strong> Персоналу и охране следует любой ценой избегать взаимодействия с аномалией(-ями), во избежание перетраха и фатального исхода контакта. Оставайтесь в безопасном месте и следуйте указаниям администрации учреждения / штаба O4. Ожидайте прибытия высококвалифицированных оперативников.</p>
 
-  <p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница"), <a href='/mtf-fi-69'>МОГ Фи-69 ("Виагра").</a></p></div>
+  <p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница"), <a href='/nsfw-hub/mtf-fi-69'>МОГ Фи-69 ("Виагра").</a></p></div>
 </div>
 
 <!-- scp !-->
 
 <h2 style='color: crimson;'>Представленные SCP объекты:</h2><ul>
-  <li><a href='/scp-939-s-ex'>SCP-939-S-EX - Со множеством голосов, и не только</a></li>
+  <li><a href='/nsfw-hub/scp-939-s-ex'>SCP-939-S-EX - Со множеством голосов, и не только</a></li>
 </ul>
 
 <div class='thanks'style='text-align: center;'>
   <h2 style="color: #bb0065;">Сборник рассказов хаба</h2>
   <hr>
   <h3>Цикл 0: Интерес</h3>
-    <p><a href='/the-perspective'>"Перспектива"</a><br><i>Автор: PRINCE</i></p>
+    <p><a href='/nsfw-hub/the-perspective'>"Перспектива"</a><br><i>Автор: PRINCE</i></p>
   <hr>
   <h3>Цикл 1: Прелюдия</h3>
   <div style='display: flex;'>
@@ -72,9 +72,9 @@
   <h3>Цикл 2: Плато</h3>
   <div class='story-center'>
     
-    <p><b><i>"Объявлен код "Розовый"!"</i></b><br><a href='/code-pink'>Часть 1: "Прибытие"</a> | <a href='/code-pink#chapter-2'>Часть 2: "Влечение"</a><br><i>Автор: AlexandrHell</i></p>
+    <p><b><i>"Объявлен код "Розовый"!"</i></b><br><a href='/nsfw-hub/code-pink'>Часть 1: "Прибытие"</a> | <a href='/nsfw-hub/code-pink#chapter-2'>Часть 2: "Влечение"</a><br><i>Автор: AlexandrHell</i></p>
 
-    <p><a href="/tough-duty">Нелегкий труд</a><br><span style='font-style: italic;'>Автор: AlexandrHell</span></p>
+    <p><a href="/nsfw-hub/tough-duty">Нелегкий труд</a><br><span style='font-style: italic;'>Автор: AlexandrHell</span></p>
 
   </div>
 </div>
