--- a/nsfw-hub/index.html
+++ b/nsfw-hub/index.html
@@ -71,6 +71,8 @@
   <hr>
   <h3>Цикл 2: Плато</h3>
   <div class='story-center'>
+
+     <p><b><i><a style="color: #bb0065;" href="/nsfw-hub/nuthouse-19f">"Дурка 19F"</a></i></b><br><a href='/nsfw-hub/nuthouse-19f#prologue'>Пролог</a> | <a href='/nsfw-hub/nuthouse-19f#chapter-1'>Часть 1: "Построение"</a> | <a href='/nsfw-hub/nuthouse-19f#chapter-2'>Часть 2: "Смена"</a><br><i>Автор: AlexandrHell</i></p>
     
     <p><b><i>"Объявлен код "Розовый"!"</i></b><br><a href='/nsfw-hub/code-pink'>Часть 1: "Прибытие"</a> | <a href='/nsfw-hub/code-pink#chapter-2'>Часть 2: "Влечение"</a><br><i>Автор: AlexandrHell</i></p>
 
