--- a/nsfw-hub/nuthouse-19f.html
+++ b/nsfw-hub/nuthouse-19f.html
@@ -47,7 +47,7 @@
 <p>Глаза старшего НС начали медленно расширяться, пульсометр на его запястье резко начал увеличивать показатели. 90 ударов. 100 ударов. 115 ударов. И после минутной задержки лицо Селвика покраснело.</span></p>
 <p>-&nbsp;&quot;Прошу прощения за беспокойство. Я зайду позже&quot; &ndash; почти под нос пробубнил себе старший НС, после чего резко развернулся и пулей вылетел из кабинета громко хлопнув дверью.</span></p>
 
-<h2 id='chapter-1'>Глава 1. Построение</h2>
+<h2 id='chapter-1'>Глава 1. "Построение"</h2>
 
 <p>Новобранец не явился на построение, организованное сержантом СБ Чеховым. Этот старый больной засранец всегда собирал весь штат службы безопасности перед сменой возле своего кабинета и зачитывал заученные наизусть инструкции лишь для того, чтобы потешить своё самолюбие.</span></p>
 <p>Этой процедурой Чехов напрочь лишал возможности рядовых сотрудников выпить кофе перед сменой, ведь как известно в знаменитой поговорке &quot;Порно начинается с прелюдии, а смена СБ с кофе&quot;.Однако у Чехова было совсем другое мнение по этому поводу и о подобных поговорках он не слышал.&nbsp;</span></p>
@@ -81,7 +81,7 @@
 <p>-&nbsp;&quot;Две боевые осколочные гранаты, сэр!&quot; - радостно ответил Рокоссовский и пафосно отдал честь.</span></p>
 <p>После этих слов в строю начался сущий кошмар...</span></p>
 
-<h2 id='chapter-2'>Глава 2. Смена</h2>
+<h2 id='chapter-2'>Глава 2. "Смена"</h2>
 
 <p>Лагуза находился у входа в кабинет сержанта, Чехов в свою очередь сидел за столом яростно жестикулируя, крича что-то невразумительное, то и дело тыкая пальцем в лежащую на столе книгу &laquo;Устав СВТ&raquo;. Сотрудник СБ Рокоссовский сидел напротив сержанта закинув ногу на ногу и ковырялся в носу. Совладав со своими эмоциями, Чехов наконец начал говорить членораздельно.</span></p>
 <p>-&nbsp;&laquo;ПРИДУРОК! УРОД! Я ТЕБЕ, СУЧОНОК, УСТРОЮ ТАКОЕ, ЧТО ТЕБЯ МАТЬ РОДНАЯ НЕ УЗНАЕТ!&raquo; - с красным лицом прокричал сержант, при этом заплёвывая всё, что было на столе и тут же у него началась серьезная одышка. Именно в эту паузу Рокоссовский успел вставить своё колкое мнение.</span></p>
