--- a/личное-дело-майора-иртеньева.html
+++ b/личное-дело-майора-иртеньева.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class='header'>
-    <div style="display: flex;align-items: center;"><div class="logo"><img src="https://i.ibb.co/Gxk4Lny/RAISA1.png" border="0" width="100%"></div>
+    <div style="display: flex;align-items: center;"><div class="logo"><img src="https://i.ibb.co/QH91DkT/RAISA.png" border="0" width="100%"></div>
     <div class="header1"><div class="head-text1">Архив АПАИБ</div><div class="head-text2">Администрация по архивно-информационной безопасности</div></div>
   </div>
    <div class="site78n-notice">Российский Филиал</div>
