--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -3,15 +3,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
   <link rel="stylesheet" href="icr-style.css">
-  <link rel="icon" href="https://i.ibb.co/dW67VT2/lrp-big.png">
-  <title>Зона 78N Досье учреждения</title>
+  <link rel="icon" href="https://i.ibb.co/37WNfwC/zone46-logo.png">
+  <title>Зона 46K - Досье учреждения</title>
 </head>
 <html>
 <body>
+
 <div class='header'>
   <div class='logo-header'><img src="https://i.ibb.co/dW67VT2/lrp-big.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>Зона 78N</div><div class='text-header1'>Российский Филиал</div></div>
 </div>
-<div style='max-width: 850px;margin: auto;'><h1>Досье Учреждения: Зона 78N</h1></div>
+<main>
+<h1>Досье Учреждения: Зона 78N</h1>
   <div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px; margin: 10px 10px 10px 0px; box-shadow: 0 1px 3px rgba(0,0,0,0);max-width: 800px;margin: auto;">
 <div style="text-align: center;">
 <h2><span><strong>Досье Учреждения Фонда SCP</strong></span></h2>
@@ -64,6 +66,7 @@
 <hr>
 <div style="text-align: center;">
 <p><span style="font-size:70%;">SECURE. CONTAIN. PROTECT.</span></p>
+</main>
 </div>
 </div>
 </body>
