--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -13,59 +13,100 @@
   <div class='logo-header'><img src="https://i.ibb.co/dW67VT2/lrp-big.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>Зона 78N</div><div class='text-header1'>Российский Филиал</div></div>
 </div>
 <main>
-<h1>Досье Учреждения: Зона 78N</h1>
-  <div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px; margin: 10px 10px 10px 0px; box-shadow: 0 1px 3px rgba(0,0,0,0);max-width: 800px;margin: auto;">
+<div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px; margin: 10px 10px 10px 40px; box-shadow: 0 1px 3px rgba(0,0,0,.2);">
 <div style="text-align: center;">
-<h2><span><strong>Досье Учреждения Фонда SCP</strong></span></h2>
-<h3><span><strong>Зона содержания 78N</strong></span></h3>
-<p><strong>Официальное обозначение:</strong> Аяно-Майское учреждение исследования и содержания при фонде SCP</p>
-<p><strong>Идентификационный код Зоны:</strong> RCSS-SITE-78N</p>
+<div style="margin: 1em 0 0 0;font-size: 230%;">'''Досье Учреждения Фонда SCP'''</div>
+Пространственная Исследовательская Зона Содержания 46K
+
+'''Официальное обозначение:''' Булун улусское Учреждение исследования и содержания при Фонде SCP
+
+'''Идентификационный код Зоны''': DimResCon Site-46K (DRCS-46K)
 </div>
-<hr>
+----
 <div style="text-align: center;">
-<h3 id="toc3"><span>Общая информация</span></h3>
+''<big>Общие сведения</big>''
 </div>
-<br>
-<strong>Дата основания:</strong> [ОЖИДАЕТ РАСШИФРОВКИ]
-<p><strong>Директор зоны:</strong> Марков Э.</p>
-<div style='float: right; width: 30%;'><img src="https://i.ibb.co/7QwBDMZ/site78n.png" width='100%%' alt="site78n" border="0"></div>
-<strong>Расположение:</strong> Аяно-Майский район, Хабаровский край, Россия
-<p><strong>Прикрытие:</strong> Метеостанция Курун-Урях</p>
-<p><strong>Функции Зоны:</strong> Содержание SCP объектов класса безопасный и евклид, исследование аномалий, обучение персонала, хранение аномальных предметов.</p>
-<p><strong>Площадь внутреннего периметра:</strong> 0.9 км<sup>2</sup></p>
-<p><strong>Площадь внешнего периметра:</strong> 2.2 км<sup>2</sup></p>
-<hr>
+[[Файл:Zone46K-map (conspiracy).png|мини|460x460px|Секторы зоны 46K сверху - [[Map:Карта Зоны 46K|Интерактивная Карта]]]]
+'''Дата ввода в эксплуатацию:''' ##/03/2022 
+
+'''Директор зоны:''' <span class="glitch">[REDACTED]</span>
+
+'''Менеджер участка 46K:''' <span class="glitch">[REDACTED]</span>
+
+'''Куратор зоны:''' Сэмюэль Ричард Коллинс 
+
+'''Расположение:''' Респ. Саха (Якутия), Булунский улус  
+
+'''Прикрытие:''' ОСЗ "220-ая российская военная база" 
+
+'''Функции Зоны:''' содержание, исследование, сдерживание. 
+
+'''Зона отчуждения:''' 17км² 
+
+'''Площадь основного учреждения:'''  0.7км² 
+
+'''Площадь внешнего периметра:''' 5км²  
+----
+<div style="text-align: center;font-size: xx-large;font-family: revert;font-weight: 500;">СЕКТОРЫ ЗОНЫ 46K</div>
+<center>'''Участок 46K'''</center>
+----
 <div style="text-align: center;">
-<h3><span>Помещения</span></h3>
+''<big>Персонал Участка 46K</big>''<br>
+[[Cотрудники|<small>''(Нажмите, чтобы ознакомится с полным списком)''</small>]]
 </div>
-<div style='float: right; width: 30%;'><a href="https://i.ibb.co/0B3YRtF/site78nplan.png"><img src="https://i.ibb.co/0B3YRtF/site78nplan.png" width='100%'alt="план зоны 78N в разрезе" border="0"></a></div>
-<strong>Поверхность:</strong><br>
-Главные офисы, жилые помещения, медицинский центр, складские помещения.
-<p><strong>Комплекс:</strong><br>
-Зоны содержания SCP, камеры класса D, лаборатория экспериментов, офисы, контрольно-пропускной пункт охраны.</p>
-<p><strong>Зоны содержания:</strong><br>
-Ограниченная зона содержания, зона содержания SCP-предметов, склад хранения АП (аномальных предметов), камера содержания SCP-457.<br></p>
+'''Количество персонала класса A:''' {{formatnum:{{PAGESINCATEGORY:a-class}}|R}}
+ 
+'''Количество персонала класса B:''' {{formatnum:{{PAGESINCATEGORY:b-class}}|R}}
+ 
+'''Количество персонала класса C:''' {{formatnum:{{PAGESINCATEGORY:c-class}}|R}} 
+
+
+'''Количество сотрудников службы безопасности:''' {{formatnum:{{PAGESINCATEGORY:guard}}|R}}
+ 
+'''Количество сотрудников научной службы:''' {{formatnum:{{PAGESINCATEGORY:scientist}}|R}}
+ 
+'''Количество сотрудников инженерно-технической службы:''' {{formatnum:{{PAGESINCATEGORY:engineer}}|R}}
+ 
+'''Количество сотрудников административной службы:''' {{formatnum:{{PAGESINCATEGORY:admin}}|R}}
+ 
+'''Количество сотрудников медицинской службы:''' {{formatnum:{{PAGESINCATEGORY:medic}}|R}}
+ <div style="text-align: center;">
+----
+''<big>Секции Участка 46K</big>''</div>
+=== Поверхность: ===
+Складские помещения (сектор '''''A''''')
+=== Комплекс: ===
+* Административное крыло (уровень -1)
+* Крыло тяжелого содержания (уровень -1)
+* Крыло легкого содержания (уровень -2)
+* Коммуникационные тоннели (уровень -2)
+* Подвальные помещения (уровень -3)
+----
 <div style="text-align: center;">
-<hr>
-<h3><span>Персонал</span></h3>
-<div style=" border: solid 2px #000; padding: 1px 15px; box-shadow: 0 1px 3px rgba(0,0,0,.2);">
-<h5><span>ВНИМАНИЕ! В СВЯЗИ С ИНЦИДЕНТОМ-78N-SIERRA ДАННАЯ ИНФОРМАЦИЯ ВРЕМЕННО НЕДОСТУПНА</span></h5>
-<h5><span>ОТЧЕТ ОБ ИНЦИДЕНТЕ НАПРАВЛЕН В ОВБ</span></h5>
+''<big>Объекты на содержании</big>''<br>[[SCP_на_содержании|<small>''(Нажмите, чтобы ознакомится с полным списком)''</small>]]
+<div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content: space-evenly;align-items: center;">
+<div style="width: 34em;text-align: start">
+'''Всего объектов:'''  {{formatnum:{{PAGESINCATEGORY:Scp}}|R}}
+ 
+'''Объектов класса SAFE:'''  {{formatnum:{{PAGESINCATEGORY:SAFE}}|R}}
+ 
+'''Объектов класса EUCLID:'''  {{formatnum:{{PAGESINCATEGORY:EUCLID}}|R}}
+ 
+'''Объектов класса KETER:'''  {{formatnum:{{PAGESINCATEGORY:KETER}}|R}}
+ 
+'''Объектов нестандартного класса:'''  {{formatnum:{{PAGESINCATEGORY:NONSTAND}}|R}}
+</div>
+<div style="width: 34em;">
+[[scp-|SCP - ####]], [[SCP-1705-RU-K]].
 </div>
 </div>
-<div style="text-align: justify;">
 <div style="text-align: center;">
-<h3><span>Объекты, находящиеся на содержании зоны 78N</span></h3>
-<div style="border: solid 2px #000; padding: 1px 15px; box-shadow: 0 1px 3px rgba(0,0,0,.2);">
-<h5><span>ВНИМАНИЕ! В СВЯЗИ С ИНЦИДЕНТОМ-78N-SIERRA ДАННАЯ ИНФОРМАЦИЯ ВРЕМЕННО НЕДОСТУПНА</span></h5>
-<h5><span>ОТЧЕТ ОБ ИНЦИДЕНТЕ НАПРАВЛЕН В ОВБ</span></h5>
-</div>
-<hr>
-<h3><span>Дополнительная информация</span></h3></div>
-Зона 78N была первоначально создана как складской сектор содержания аномальных предметов, не обладающих достаточными аномальными свойствами для классификации их как отдельных SCP объектов, но по мере развития приобрела и другие функции, такие как исследовательские и содержательные. Благодаря относительной безопасности зоны, она так же стала местом начала стажировки и обучения многих сотрудников Фонда. Географическое положение участка привлекает многих специалистов из Японии, Кореи, Китая. Зона представляет малую ценность для групп интереса, рейды враждебных группировок явление крайне редкое. Ввиду специфики зоны, она не обладает ядерным зарядом Alpha/Omega, тем не менее в конструкции предусмотрен взрывоустойчивый слой из титана (Ti) - 10м, свинца (Pb) 25м и вольфрама (W) 20м, защитный слой способен выдержать непосредственный взрыв мощностью 10-15 Мт и в крайнем случае зона может служить бункером. Нужда в D классе в зоне небольшая (средняя потребность зоны 9-17 сотрудников класса D в месяц), в основном они используются для обучения сотрудников СБ, оставшиеся используются в лаборатории.</div>
-<hr>
+----
 <div style="text-align: center;">
-<p><span style="font-size:70%;">SECURE. CONTAIN. PROTECT.</span></p>
+''<big>Дополнительная информация</big>''</div>
+</div>
+{{DEFAULTSORT:Информация_о_Зоне-46K}}
+
 </main>
 </div>
 </div>
