--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -13,7 +13,8 @@
   <div class='logo-header'><img src="https://i.ibb.co/dW67VT2/lrp-big.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>Зона 78N</div><div class='text-header1'>Российский Филиал</div></div>
 </div>
 <main>
-<div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px; margin: 10px 10px 10px 40px; box-shadow: 0 1px 3px rgba(0,0,0,.2);">
+  <h1>Досье Учреждения: Зона 46K</h1>
+<div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px;">
 <div style="text-align: center;">
 <div style="margin: 1em 0 0 0;font-size: 230%;">'''Досье Учреждения Фонда SCP'''</div>
 Пространственная Исследовательская Зона Содержания 46K
