--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -9,6 +9,8 @@
 <html>
 <body>
 
+<div class="body">
+
 <div class='header'>
   <div class='logo-header'><img src="https://i.ibb.co/dW67VT2/lrp-big.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>Зона 78N</div><div class='text-header1'>Российский Филиал</div></div>
 </div>
@@ -111,5 +113,8 @@
 </main>
 </div>
 </div>
+<!-- body -->
+</div>
+<!-- body -->
 </body>
 </html>
