--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -11,9 +11,14 @@
 
 <div class="body"></div>
 
-<div class='header'>
-  <div class='logo-header'><img src="https://i.ibb.co/dW67VT2/lrp-big.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>Зона 78N</div><div class='text-header1'>Российский Филиал</div></div>
-</div>
+<header>
+  <div class="logo"><img src="https://i.ibb.co/mGGp3Vj/46K-logo.png"></div>
+  <div class="text-holder">
+    <div class="text1">ЗОНА 46K</div>
+    <div class="text2">Хаб Межпространственного кризиса</div>
+  </div>
+</header>
+
 <main>
   <h1>Досье Учреждения: Зона 46K</h1>
 <div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px;">
