--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -30,7 +30,7 @@
 
 '''Идентификационный код Зоны''': DimResCon Site-46K (DRCS-46K)
 </div>
-----
+<hr>
 <div style="text-align: center;">
 ''<big>Общие сведения</big>''
 </div>
@@ -54,32 +54,32 @@
 '''Площадь основного учреждения:'''  0.7км² 
 
 '''Площадь внешнего периметра:''' 5км²  
-----
+<hr>
 <div style="text-align: center;font-size: xx-large;font-family: revert;font-weight: 500;">СЕКТОРЫ ЗОНЫ 46K</div>
 <center>'''Участок 46K'''</center>
-----
+<hr>
 <div style="text-align: center;">
 ''<big>Персонал Участка 46K</big>''<br>
 [[Cотрудники|<small>''(Нажмите, чтобы ознакомится с полным списком)''</small>]]
 </div>
-'''Количество персонала класса A:''' {{formatnum:{{PAGESINCATEGORY:a-class}}|R}}
+'''Количество персонала класса A:'''
  
-'''Количество персонала класса B:''' {{formatnum:{{PAGESINCATEGORY:b-class}}|R}}
+'''Количество персонала класса B:'''
  
-'''Количество персонала класса C:''' {{formatnum:{{PAGESINCATEGORY:c-class}}|R}} 
+'''Количество персонала класса C:'''
 
 
-'''Количество сотрудников службы безопасности:''' {{formatnum:{{PAGESINCATEGORY:guard}}|R}}
+'''Количество сотрудников службы безопасности:'''
  
-'''Количество сотрудников научной службы:''' {{formatnum:{{PAGESINCATEGORY:scientist}}|R}}
+'''Количество сотрудников научной службы:'''
  
-'''Количество сотрудников инженерно-технической службы:''' {{formatnum:{{PAGESINCATEGORY:engineer}}|R}}
+'''Количество сотрудников инженерно-технической службы:'''
  
-'''Количество сотрудников административной службы:''' {{formatnum:{{PAGESINCATEGORY:admin}}|R}}
+'''Количество сотрудников административной службы:'''
  
-'''Количество сотрудников медицинской службы:''' {{formatnum:{{PAGESINCATEGORY:medic}}|R}}
+'''Количество сотрудников медицинской службы:'''
  <div style="text-align: center;">
-----
+<hr>
 ''<big>Секции Участка 46K</big>''</div>
 === Поверхность: ===
 Складские помещения (сектор '''''A''''')
@@ -89,27 +89,27 @@
 * Крыло легкого содержания (уровень -2)
 * Коммуникационные тоннели (уровень -2)
 * Подвальные помещения (уровень -3)
-----
+<hr>
 <div style="text-align: center;">
 ''<big>Объекты на содержании</big>''<br>[[SCP_на_содержании|<small>''(Нажмите, чтобы ознакомится с полным списком)''</small>]]
 <div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content: space-evenly;align-items: center;">
 <div style="width: 34em;text-align: start">
-'''Всего объектов:'''  {{formatnum:{{PAGESINCATEGORY:Scp}}|R}}
+'''Всего объектов:'''
  
-'''Объектов класса SAFE:'''  {{formatnum:{{PAGESINCATEGORY:SAFE}}|R}}
+'''Объектов класса SAFE:'''
  
-'''Объектов класса EUCLID:'''  {{formatnum:{{PAGESINCATEGORY:EUCLID}}|R}}
+'''Объектов класса EUCLID:'''
  
-'''Объектов класса KETER:'''  {{formatnum:{{PAGESINCATEGORY:KETER}}|R}}
+'''Объектов класса KETER:'''
  
-'''Объектов нестандартного класса:'''  {{formatnum:{{PAGESINCATEGORY:NONSTAND}}|R}}
+'''Объектов нестандартного класса:'''
 </div>
 <div style="width: 34em;">
 [[scp-|SCP - ####]], [[SCP-1705-RU-K]].
 </div>
 </div>
 <div style="text-align: center;">
-----
+<hr>
 <div style="text-align: center;">
 ''<big>Дополнительная информация</big>''</div>
 </div>
