--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -21,21 +21,20 @@
 
 <main>
   <h1>Досье Учреждения: Зона 46K</h1>
-<div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px;">
-<div style="text-align: center;">
-<div style="margin: 1em 0 0 0;font-size: 230%;">'''Досье Учреждения Фонда SCP'''</div>
-Пространственная Исследовательская Зона Содержания 46K
-
-'''Официальное обозначение:''' Булун улусское Учреждение исследования и содержания при Фонде SCP
-
-'''Идентификационный код Зоны''': DimResCon Site-46K (DRCS-46K)
-</div>
+<div style="border: solid 2px #000000; padding: 1px 15px;">
+<center>
+<h2>Досье Учреждения Фонда SCP'''</h2>
+Пространственная Исследовательская Зона Содержания 46K<br>
+<p><b>Официальное обозначение:</b> Булун улусское Учреждение исследования и содержания при Фонде SCP</p>
+<p><b>Идентификационный код Зоны</b>: DimResCon Site-46K (DRCS-46K)</p>
+</center>
 <hr>
 <div style="text-align: center;">
-''<big>Общие сведения</big>''
+<big>Общие сведения</big>
 </div>
-[[Файл:Zone46K-map (conspiracy).png|мини|460x460px|Секторы зоны 46K сверху - [[Map:Карта Зоны 46K|Интерактивная Карта]]]]
-'''Дата ввода в эксплуатацию:''' ##/03/2022 
+<div style="float: right; width: 200px"><img src="https://i.ibb.co/3TDZfWy/Zone46-map.png" width="100%" /></div>
+
+<p><b>Дата ввода в эксплуатацию:</b> ##/03/2022</p>
 
 '''Директор зоны:''' <span class="glitch">[REDACTED]</span>
 
