--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -53,14 +53,13 @@
 <p><b>Площадь внешнего периметра:</b> 5км²</p>
 <hr>
 <center>
-<div style="font-size: xx-large;font-family: revert;font-weight: 500;">СЕКТОРЫ ЗОНЫ 46K</div>
-Участок 46K</center>
+<div class="b">СЕКТОРЫ ЗОНЫ 46K</div>
+Участок 46K
+</center>
 <hr>
-<div class="h">
-Персонал Участка 46K
-
+<div class="h">Персонал Участка 46K</div>
 [[Cотрудники|<small>''(Нажмите, чтобы ознакомится с полным списком)''</small>]]
-</div>
+
 '''Количество персонала класса A:'''
  
 '''Количество персонала класса B:'''
@@ -77,17 +76,21 @@
 '''Количество сотрудников административной службы:'''
  
 '''Количество сотрудников медицинской службы:'''
- <div style="text-align: center;">
 <hr>
-''<big>Секции Участка 46K</big>''</div>
-=== Поверхность: ===
-Складские помещения (сектор '''''A''''')
-=== Комплекс: ===
-* Административное крыло (уровень -1)
-* Крыло тяжелого содержания (уровень -1)
-* Крыло легкого содержания (уровень -2)
-* Коммуникационные тоннели (уровень -2)
-* Подвальные помещения (уровень -3)
+<center>
+<big>Секции Участка 46K</big>
+</center>
+<p><b>=== Поверхность: ===</b><br>
+Складские помещения (сектор A)
+</p>
+<p><b>=== Комплекс: ===</b>
+  <ul>
+<li>Административное крыло (уровень -1)</li>
+<li>Крыло тяжелого содержания (уровень -1)</li>
+<li>Крыло легкого содержания (уровень -2)</li>
+<li>Коммуникационные тоннели (уровень -2)</li>
+<li>Подвальные помещения (уровень -3)</li>
+</ul></p>
 <hr>
 <div style="text-align: center;">
 ''<big>Объекты на содержании</big>''<br>[[SCP_на_содержании|<small>''(Нажмите, чтобы ознакомится с полным списком)''</small>]]
@@ -112,11 +115,9 @@
 <div style="text-align: center;">
 ''<big>Дополнительная информация</big>''</div>
 </div>
-{{DEFAULTSORT:Информация_о_Зоне-46K}}
 
 </main>
 </div>
 </div>
-
 </body>
 </html>
