--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -58,7 +58,7 @@
 <hr>
 <div class="s">Участок 46K</div>
 <div class="h">Персонал Участка 46K</div>
-[[Cотрудники|<small>''(Нажмите, чтобы ознакомится с полным списком)''</small>]]
+<center><a href='/staff'>Cотрудники | <tt>(Нажмите, чтобы ознакомится с полным списком)</tt></a></center>
 
 <p><b>Менеджер Участка:</b> [REDACTED]</p>
 
@@ -77,22 +77,23 @@
 <p><b>Количество сотрудников административной службы:</b> [REDACTED]</p>
  
 <p><b>Количество сотрудников медицинской службы:</b> [REDACTED]</p>
-<hr>
+
+
 <div class="h">Секции Участка 46K</div>
-<p><b>=== Поверхность: ===</b><br>
-Складские помещения (сектор A)
-</p>
-<p><b>=== Комплекс: ===</b>
-  <ul>
-<li>Административное крыло (уровень -1)</li>
-<li>Крыло тяжелого содержания (уровень -1)</li>
-<li>Крыло легкого содержания (уровень -2)</li>
-<li>Коммуникационные тоннели (уровень -2)</li>
-<li>Подвальные помещения (уровень -3)</li>
-</ul></p>
-<hr>
-<div style="text-align: center;">
-''<big>Объекты на содержании</big>''<br>[[SCP_на_содержании|<small>''(Нажмите, чтобы ознакомится с полным списком)''</small>]]
+<ul><b>=== Поверхность: ===</b>
+  <li>Складские помещения (сектор A)</li>
+</ul>
+<ul><b>=== Комплекс: ===</b>
+  <li>Административное крыло (уровень -1)</li>
+  <li>Крыло тяжелого содержания (уровень -1)</li>
+  <li>Крыло легкого содержания (уровень -2)</li>
+  <li>Коммуникационные тоннели (уровень -2)</li>
+  <li>Подвальные помещения (уровень -3)</li>
+</ul>
+
+
+<div class="h">Объекты на содержании</div>
+<center><a href='/scp-list'>SCP_на_содержании|<tt>(Нажмите, чтобы ознакомится с полным списком)</tt></a></center>
 <div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content: space-evenly;align-items: center;">
 <div style="width: 34em;text-align: start">
 '''Всего объектов:'''
