--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -57,8 +57,7 @@
 </center>
 <hr>
 <div class="s">Участок 46K</div>
-<div class="h">Персонал Участка 46K</div>
-<center><a href='/staff'>Cотрудники | <tt>(Нажмите, чтобы ознакомится с полным списком)</tt></a></center>
+<div class="h">Персонал Участка 46K<br><a href='/staff'><tt>(Нажмите, чтобы ознакомится с полным списком)</tt></a></div>
 
 <p><b>Менеджер Участка:</b> [REDACTED]</p>
 
@@ -92,8 +91,8 @@
 </ul>
 
 
-<div class="h">Объекты на содержании</div>
-<center><a href='/scp-list'>SCP_на_содержании|<tt>(Нажмите, чтобы ознакомится с полным списком)</tt></a></center>
+<div class="h">Объекты на содержании<br><a href='/scp-list'><tt>(Нажмите, чтобы ознакомится с полным списком)</tt></a></div>
+
 <div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content: space-evenly;align-items: center;">
 <div style="width: 34em;text-align: start">
 '''Всего объектов:'''
