--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -93,27 +93,23 @@
 
 <div class="h">Объекты на содержании<br><a href='/scp-list'><tt>(Нажмите, чтобы ознакомится с полным списком)</tt></a></div>
 
-<div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content: space-evenly;align-items: center;">
+<div class="scp-flex">
 <div style="width: 34em;text-align: start">
-'''Всего объектов:'''
+<p><b>Всего объектов:</b> </p>
  
-'''Объектов класса SAFE:'''
+<p><b>Объектов класса SAFE:</b> </p>
  
-'''Объектов класса EUCLID:'''
+<p><b>Объектов класса EUCLID:</b> </p>
  
-'''Объектов класса KETER:'''
+<p><b>Объектов класса KETER:</b> </p>
  
-'''Объектов нестандартного класса:'''
+<p><b>Объектов нестандартного класса:</b> </p>
 </div>
 <div style="width: 34em;">
-[[scp-|SCP - ####]], [[SCP-1705-RU-K]].
+<p>[SCP - ####], [SCP-1705-RU-K].</p>
 </div>
 </div>
-<div style="text-align: center;">
-<hr>
-<div style="text-align: center;">
-''<big>Дополнительная информация</big>''</div>
-</div>
+<big>Дополнительная информация</big>
 
 </main>
 </div>
