--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -32,7 +32,7 @@
 <div class="h">
 Общие сведения
 </div>
-<div class="map"><img src="https://i.ibb.co/3TDZfWy/Zone46-map.png" width="100%" /></div>
+<div class="map"><img src="https://i.ibb.co/3TDZfWy/Zone46-map.png" width="100%" />Секторы Зоны 46K (вид сверху)</div>
 
 <p><b>Дата ввода в эксплуатацию:</b> ##/03/2022</p>
 
