--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -29,9 +29,7 @@
 <p><b>Идентификационный код Зоны</b>: DimResCon Site-46K (DRCS-46K)</p>
 </center>
 <hr>
-<div class="h">
-Общие сведения
-</div>
+<div class="h">Общие сведения</div>
 <div class="map"><img src="https://i.ibb.co/3TDZfWy/Zone46-map.png" width="100%" />Секторы Зоны 46K (вид сверху)</div>
 
 <p><b>Дата ввода в эксплуатацию:</b> ##/03/2022</p>
@@ -51,10 +49,9 @@
 <p><b>Площадь основного учреждения:</b>  0.7км²</p>
 
 <p><b>Площадь внешнего периметра:</b> 5км²</p>
+<div class="h">Сведения о персонале</div>
 <hr>
-<center>
 <div class="b">СЕКТОРЫ ЗОНЫ 46K</div>
-</center>
 <hr>
 <div class="s">Участок 46K</div>
 <div class="h">Персонал Участка 46K<br><a href='/staff'><tt>(Нажмите, чтобы ознакомится с полным списком)</tt></a></div>
@@ -81,6 +78,10 @@
 <div class="h">Секции Участка 46K</div>
 <ul><b>=== Поверхность: ===</b>
   <li>Складские помещения (сектор A)</li>
+  <li>Запасный КПП (сектор A)</li>
+  <li>Парковка (сектор B)</li>
+  <li>Взлетная площадка вертолётная (сектор B)</li>
+  <li>Основной КПП (сектор B)</li>
 </ul>
 <ul><b>=== Комплекс: ===</b>
   <li>Административное крыло (уровень -1)</li>
