--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -101,7 +101,7 @@
 <div class="h">Объекты на содержании<br><a href='/scp-list'><tt>(Нажмите, чтобы ознакомится с полным списком)</tt></a></div>
 
 <div class="scp-flex">
-<div style="width: 50%;text-align: start">
+<div style="min-width: 50%;text-align: start">
 <p><b>Всего объектов:</b> </p>
  
 <p><b>Объектов класса SAFE:</b> </p>
