--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -34,9 +34,9 @@
 
 <p><b>Дата ввода в эксплуатацию:</b> ██/03/2022</p>
 
-<p><b>Директор зоны:</b> Крамов Комрад Леонидович</p>
+<p><b>Директор Зоны:</b> Крамов Комрад Леонидович</p>
 
-<p><b>Куратор зоны:</b> Сэмюэль Ричард Коллинс</p>
+<p><b>Куратор Зоны:</b> Сэмюэль Ричард Коллинс</p>
 
 <p><b>Расположение:</b> Респ. Саха (Якутия), Булунский улус</p>
 
@@ -46,14 +46,14 @@
 
 <p><b>Зона отчуждения:</b> 17км²</p>
 
-<p><b>Площадь основного учреждения:</b>  0.7км²</p>
+<p><b>Площадь основного учреждения:</b> 0.7км²</p>
 
 <p><b>Площадь внешнего периметра:</b> 5км²</p>
 
 
 <div class="h">Сведения о персонале</div>
 
-<p><b>Количество персонала класса A:</b> 1</p>
+<p><b>Количество персонала класса A:</b> 2</p>
  
 <p><b>Количество персонала класса B:</b> [REDACTED]</p>
  
