--- a/icr-hub/site-46k-info.html
+++ b/icr-hub/site-46k-info.html
@@ -112,8 +112,22 @@
  
 <p><b>Объектов нестандартного класса:</b> </p>
 </div>
-<div style="width: 50%;">
-<p>[SCP - ████]<br>[SCP-1705-RU-K]</p>
+<div class="scp-flex2">
+<a>[SCP - ████-K]</a>
+<a>[SCP-1705-K]</a>
+<a>[SCP - ████-K]</a>
+<a>[SCP - ████-K]</a>
+<a>[SCP - ████-K]</a>
+<a>[SCP - ████-K]</a>
+<a>[SCP - ████-K]</a>
+<a>[SCP - ████-K]</a>
+<a>[SCP - ████-K]</a>
+<a>[SCP - ████-K]</a>
+<a>[SCP - ████-K]</a>
+<a>[SCP - ████-K]</a>
+<a>[SCP - ████-K]</a>
+<a>[SCP - ████-K]</a>
+
 </div>
 </div>
 <div class="h">Дополнительная информация</div>
